zookeeper-networkpolicy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zookeeper
  namespace: default
  labels:
    app.kubernetes.io/component: zookeeper
    app.kubernetes.io/name: zookeeper
spec:
  egress:
    - ports: *intranodes_ports
  ingress:
    - ports:
        - port: 2181
      from:
        - podSelector:
            matchLabels: {}
    - ports: &intranodes_ports
        - port: 2888
        - port: 3888
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: zookeeper
              app.kubernetes.io/name: zookeeper
  podSelector:
    matchLabels:
      app.kubernetes.io/component: zookeeper
      app.kubernetes.io/name: zookeeper
